# nipplebot.rs

./: .editorconfig  .env.sample  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG  Cargo.toml  Dockerfile  README.md  SECURITY.md  rustfmt.toml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: build.yml  code_quality.yml  containerize.yml  coverage.yml  release.yml  security.yml  test.yml
client/: README.md
client/src/: HTTP.au3  JSON.au3  README.md  nippleconfig.example.ini  nipplecontrol.au3  readconfig.au3  settingsgui.au3  writeconfig.au3
common/: Cargo.toml
common/src/: errors.rs  lib.rs  logging.rs
core/: Cargo.toml
core/src/: constants.rs  hooks.rs  main.rs
core/src/commands/: emoji.rs  general.rs  math.rs  meta.rs  mod.rs  owner.rs  voice.rs
core/src/helpers/: check.rs
server/: Cargo.toml
server/src/: main.rs
web/: .gitignore  Cargo.toml  LICENSE  README.md
web/src/: main.rs
