[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
nats = "0.15.2"

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "signal", "rt-multi-thread"]
