[package]
name = "core"
version = "0.1.0"
authors = ["Fabio Tea <iam@f4b.io>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
itconfig = "1.1.1"
serde_json = "1.0.68"
serde = "1.0.130"
common = { path = "../common" }
songbird = "0.2.0"
tracing = "0.1.29"
nats = "0.15.2"

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "client", "gateway", "framework", "standard_framework", "voice", "rustls_backend", "model", "unstable_discord_api"]
version = "0.10.9"
