[package]
name = "web"
version = "0.1.0"
authors = ["Fabio Tea <iam@f4b.io>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/f4bio/nipplebot.rs"
documentation = "https://github.com/f4bio/nipplebot.rs"
homepage = "https://github.com/f4bio/nipplebot.rs"
description = """
nipplebot web dashboard
"""
keywords = ["nipplebot", "wasm"]
exclude = ["/utils/*", "/.travis.yml", "/appveyor.yml", ".gitignore"]
autobenches = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rillrate = "0.41.0"
tracing = "0.1.29"
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.0"
webbrowser = "0.5.5"
itconfig = "1.1.1"
dotenv = "0.15.0"
serde = "1.0.130"
common = { path = "../common" }
serenity = "0.10.9"

[dependencies.tokio]
version = "1.12.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["json", "rustls-tls"]

[features]
post-ping = []
